--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-behavior.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-behavior.html
@@ -137,6 +137,7 @@
             this._addStampDownloadOperationProperties(stamp, moldStamp);
             this._addStampPreviewOperationProperties(stamp, moldStamp);
             this._addStampExportOperationProperties(stamp, moldStamp);
+            this._addStampTaskOperationProperties(stamp, moldStamp);
             this._addStampItemLinksProperties(stamp, moldBlock, moldStamp);
             this._addStampCatalogLinkProperties(stamp, moldBlock, moldStamp);
             this._addStampLocationProperties(stamp, moldStamp);
@@ -175,8 +176,7 @@
         _addStampOperationProperties : function(stamp, moldStamp) {
             if (!stamp.isOperation) return;
             stamp.properties.mode = this._propertyValueOf(moldStamp,'mode').toLowerCase();
-            stamp.properties.alexandriaIcon = this._propertyValueOf(moldStamp,'alexandria-icon');
-            stamp.properties.confirm = this._parseFunctions(this._propertyValueOf(moldStamp,'confirm'));
+            stamp.properties.alexandriaIcon = this._propertyValueOf(moldStamp,'alexandriaIcon');
         },
 
         _addStampDownloadOperationProperties : function(stamp, moldStamp) {
@@ -197,6 +197,11 @@
             stamp.properties.options = this._propertyValueOf(moldStamp,'options').split(",");
             stamp.properties.from = this._propertyValueOf(moldStamp,'from');
             stamp.properties.to = this._propertyValueOf(moldStamp,'to');
+        },
+
+        _addStampTaskOperationProperties : function(stamp, moldStamp) {
+            if (!stamp.isTaskOperation) return;
+            stamp.properties.confirm = this._parseFunctions(this._propertyValueOf(moldStamp,'confirm'));
         },
 
         _addStampItemLinksProperties : function(stamp, moldBlock, moldStamp) {
@@ -311,8 +316,8 @@
 
         _isOperation : function(stamp) {
             return this._isDownloadOperation(stamp) || this._isExportOperation(stamp) ||
-                   this._isPreviewOperation(stamp) || this._isTaskOperation(stamp) ||
-                   this._isOpenDialogOperation(stamp);
+                this._isPreviewOperation(stamp) || this._isTaskOperation(stamp) ||
+                this._isOpenDialogOperation(stamp);
         },
 
         _isDownloadOperation : function(stamp) {
