--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-export-operation.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-export-operation.html
@@ -10,7 +10,7 @@
 <dom-module id="alexandria-mold-export-operation">
 
     <template>
-        <alexandria-mold-operation-trigger id="operation" title="[[_title]]" icon="[[_icon]]" styles="[[styles]]" mode="[[mode]]" on-execute="_openExportOptions"></alexandria-mold-operation-trigger>
+        <alexandria-mold-operation-trigger id="operation" title="[[_title]]" icon="[[icon]]" styles="[[styles]]" mode="[[mode]]" on-execute="_openExportOptions"></alexandria-mold-operation-trigger>
         <paper-dialog id="dialog" no-overlap horizontal-align="left" vertical-align="top">
             <template is="dom-if" if="[[!title.length]]">
                 <h2>[[Export]]</h2>
@@ -77,8 +77,7 @@
                 to : String,
                 option : String,
                 options : { type: Array, observer: "_selectOption" },
-                icon : { type: String, observer: "_refreshIcon" },
-                _icon : { type: String, value: function() { return "archive"; } },
+                icon : String,
                 styles : String,
                 mode : String
             },
@@ -111,11 +110,6 @@
 
             _refreshTitle : function() {
                 this._title = this.title != null && this.title != "" ? this.title : this.Export;
-            },
-
-            _refreshIcon : function() {
-                if (this.icon == null) return;
-                this._icon = this.icon;
             },
 
             _export : function(e) {
