Added CatalogTime, CatalogTimeRange stamps

--- a/alexandria/activity-elements-activity/src/widgets/_common/alexandria-date-behavior.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/alexandria-date-behavior.html
@@ -16,18 +16,18 @@
                 WeekFormatShort: 'sem. ::date:: ::year::',
                 DayFormat: '::date:: de ::month:: de ::year::',
                 DayFormatShort: '::numericDay::',
-                SixHoursFormat: '::date:: horas del ::numericDay::',
+                SixHoursFormat: '::date:: horas del ::fullDay::',
                 SixHoursFormatShort: '::date:: ::numericDay::',
-                HourFormat: '::date:: horas del ::numericDay::',
+                HourFormat: '::date:: horas del ::fullDay::',
                 HourFormatShort: '::date:: ::numericDay::',
-                FifteenMinutesFormat: '::date:: minutos del ::numericDay::',
+                FifteenMinutesFormat: '::date:: minutos del ::fullDay::',
                 FifteenMinutesFormatShort: '::date:: ::numericDay::',
-                MinuteFormat: '::date:: minutos del ::numericDay::',
+                MinuteFormat: '::date:: minutos del ::fullDay::',
                 MinuteFormatShort: '::date:: ::numericDay::',
-                SecondFormat: 'segundo ::date:: de ::numericDay::',
+                SecondFormat: 'segundo ::date:: de ::fullDay::',
                 SecondFormatShort: '::date:: ::numericDay::',
                 NumericDayFormat: 'L',
-                FullDayFormat: 'LL',
+                FullDayFormat: 'dddd, DD [de] MMMM [de] YYYY',
                 First: '1er',
                 Second: '2do',
                 Third: '3er',
@@ -44,18 +44,18 @@
                 WeekFormatShort: 'week ::date:: ::year::',
                 DayFormat: '::date:: of ::month:: of ::year::',
                 DayFormatShort: '::numericDay::',
-                SixHoursFormat: '::date:: hours of ::numericDay::',
+                SixHoursFormat: '::date:: hours of ::fullDay::',
                 SixHoursFormatShort: '::numericDay:: ::date::',
-                HourFormat: '::date:: hours of ::numericDay::',
+                HourFormat: '::date:: hours of ::fullDay::',
                 HourFormatShort: '::numericDay:: ::date::',
-                FifteenMinutesFormat: '::date:: minutes of ::numericDay::',
+                FifteenMinutesFormat: '::date:: minutes of ::fullDay::',
                 FifteenMinutesFormatShort: '::numericDay:: ::date::',
-                MinuteFormat: '::date:: minutes of ::numericDay::',
+                MinuteFormat: '::date:: minutes of ::fullDay::',
                 MinuteFormatShort: '::numericDay:: ::date::',
-                SecondFormat: 'second ::date:: of ::numericDay::',
+                SecondFormat: 'second ::date:: of ::fullDay::',
                 SecondFormatShort: '::numericDay:: ::date::',
                 NumericDayFormat: 'L',
-                FullDayFormat: 'LL',
+                FullDayFormat: 'dddd, DD [of] MMMM [of] YYYY',
                 First: '1st',
                 Second: '2nd',
                 Third: '3th',
@@ -114,7 +114,7 @@
 
         dayOf: function(date, language) {
             moment.locale(language);
-            return moment(date).format("dddd DD");
+            return moment(date).format("dddd, DD");
         },
 
         fullDayOf: function(date, language) {
